# Projeto-Ozempic-Seguro

./: .env.example  .gitignore  .pre-commit-config.yaml  1.txt  ARCHITECTURE_IMPROVEMENTS.md  Iniciar Sessão.py  Login1.py  README.md  SECURITY_IMPROVEMENTS.md  UX_UI_IMPROVEMENTS.md  algo.py  pyproject.toml  pytest.ini  requirements.txt  run.py
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md
scripts/: reset_admin.py
src/: auth.py  main.py  session_manager.py
src/data/: database.py  ozempic_seguro.db  reset_database.py  usuarios.json
src/data/migrations/: add_tecnico_user_type.py
src/ozempic_seguro/: config.py  main.py  session.py
src/ozempic_seguro/controllers/: __init__.py  navigation_controller.py
src/ozempic_seguro/core/: __init__.py  base_views.py  cache.py  exceptions.py  logger.py  structured_logger.py  theme.py  validators.py
src/ozempic_seguro/migrations/: 001_initial.sql
src/ozempic_seguro/models/: auth.py
src/ozempic_seguro/repositories/: __init__.py  audit_repository.py  connection.py  database.py  encrypted_database.py  gaveta_repository.py  input_validator.py  interfaces.py  reset_database.py  security.py  security_logger.py  user_repository.py
src/ozempic_seguro/services/: __init__.py  audit_service.py  audit_view_service.py  auth_service.py  drawer_service.py  gaveta_service.py  service_factory.py  simple_factory.py  timer_control_service.py  user_management_service.py  user_registration_service.py  user_service.py
src/utils/: image_utils.py
src/views/: components.py  gerenciamento_usuarios_view.py  iniciar_sessao_view.py  login_view.py  painel_administrador_view.py  pasta_state_manager.py  repositor_view.py  tela_logo_view.py  vendedor_view.py
tests/: conftest.py  test_audit_repository.py  test_audit_repository_extended.py  test_audit_service.py  test_audit_view_service.py  test_auth_service.py  test_base_views.py  test_cache.py  test_cache_extended.py  test_cache_functions.py  test_config.py  test_config_extended.py  test_connection.py  test_connection_extended.py  test_database.py  test_database_manager.py  test_database_simple.py  test_drawer_service.py  test_exceptions.py  test_exceptions_extended.py  test_exceptions_full.py  test_gaveta_repository.py  test_gaveta_repository_full.py  test_gaveta_service.py  test_gaveta_service_extended.py  test_interfaces.py  test_logger.py  test_login.py  test_login_attempts.py  test_security.py  test_security_extended.py  test_security_logger.py  test_service_factory.py  test_services_extended.py  test_session.py  test_session_integration.py  test_session_manager_extended.py  test_session_manager_full.py  test_session_simple.py  test_simple_factory.py  (+16 more)
(+44 files in other folders)
